--- a/package.json
+++ b/package.json
@@ -1,36 +1,36 @@
 {
-  "name": "open-simulcast",
+  "name": "svelte-express-boilerplate",
   "version": "1.0.0",
-  "description": "A custom RTMP re-streaming solution",
-  "type": "module",
-  "main": "src/backend/server.js",
+  "description": "Boilerplate for developing full stack apps with Express and Svelte.js",
+  "main": "src/app.js",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start:app": "node src/backend/server.js",
-    "start:web": "npm run dev",
-    "start": "concurrently \"npm run start:app\" \"npm run start:web\""
+    "client-install": "cd client && npm install",
+    "start": "node src/index.js",
+    "serve:server": "nodemon src/index.js",
+    "serve:client": "cd client && npm run dev",
+    "dev": "concurrently \"npm run serve:server\" \"npm run serve:client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false cd client && npm install && npm run build"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dj0nny/svelte-express-boilerplate.git"
+  },
+  "author": "dj0nny",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/dj0nny/svelte-express-boilerplate/issues"
+  },
+  "homepage": "https://github.com/dj0nny/svelte-express-boilerplate#readme",
   "dependencies": {
-    "@jamescoyle/svelte-icon": "^0.1.1",
-    "@mdi/js": "^7.2.96",
-    "@rollup/plugin-commonjs": "^24.0.0",
-    "@svelteuidev/composables": "^0.13.0",
-    "@svelteuidev/core": "^0.13.0",
+    "body-parser": "^1.20.1",
+    "concurrently": "^7.5.0",
+    "cors": "^2.8.5",
     "dockerode": "^3.3.5",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
-    "rollup-plugin-css-only": "^4.3.0",
-    "rollup-plugin-svelte": "^7.1.2",
-    "svelte": "^3.55.0",
     "uuid": "^9.0.0"
   },
-  "author": "ItWasEnder",
-  "license": "ISC",
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^15.1.0",
-    "@rollup/plugin-terser": "^0.4.3",
-    "concurrently": "^8.1.0",
-    "rollup": "^3.24.0",
-    "rollup-plugin-livereload": "^2.0.5"
+    "nodemon": "^2.0.20"
   }
 }
