--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "serve:server": "nodemon src/index.js",
     "serve:client": "cd client && npm run dev",
     "dev": "concurrently \"npm run serve:server\" \"npm run serve:client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false cd client && npm install && npm run build"
+    "prod": "npm run serve:server --production"
   },
   "repository": {
     "type": "git",
